fix(progress): left aligned measure value with fixed with modifier

--- a/src/patternfly/components/Progress/progress.scss
+++ b/src/patternfly/components/Progress/progress.scss
@@ -90,6 +90,7 @@
 
       &.pf-m-fixed-width {
         width: var(--pf-c-progress__measure--m-fixed-width--Width);
+        text-align: left;
       }
     }
 
